[package]
name = "strapd-core"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.18.1", features = ["v4", "v7"] }
base64 = "0.22.1"
json = "0.12.4"
quick-xml = "0.38.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
hex = "0.4.3"
urlencoding = "2.1.3"
sqlparse = "0.3.3"
rand = "0.9.2"
