[package]
name = "strapd-core"
version = "1.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
hex = "0.4.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
hmac = "0.12.1"
json = "0.12.4"
md-5 = "0.10.6"
quick-xml = "0.38.3"
rand = "0.9.2"
sha1 = "0.10.6"
sha2 = "0.10.9"
sqlparse = "0.3.3"
urlencoding = "2.1.3"
ulid = "1.2.1"
uuid = { version = "1.18.1", features = ["v4", "v7", "js"] }
yaml-rust = "0.4.5"
