[package]
name = "strapd-wasm"
version = "1.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
strapd-core = { path = "../core" }
wasm-bindgen = "0.2.105"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
